applications/backbone/utility/keda/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: tailscale
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kgateway
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: keda
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: coredns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: keda
  - toCIDRSet:
    - cidr: 10.0.0.0/8
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 192.168.0.0/16
